style(ux): raise resting drawer position to ensure 2nd song visibility

--- a/src/index.css
+++ b/src/index.css
@@ -479,7 +479,7 @@ input[type=range]::-moz-range-track {
 
 .setlist-section {
   position: absolute;
-  top: calc(100dvh - 170px);
+  top: calc(100dvh - 210px);
   left: 0;
   width: 100%;
   height: calc(100dvh - 60px);
